no longer will read more be hidden on mobile. no longer

--- a/content/stylesheets/_post-list.scss
+++ b/content/stylesheets/_post-list.scss
@@ -63,9 +63,6 @@ $post-image-size-small: em(100);
         }
 
         @include media($transient) {
-            a.read-more {
-                display: none;
-            }
             p.subheading {
                 display: inherit;
             }
